--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comp229-f2020-midterm",
+  "name": "comp229-f2020-midterm-301064568",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -57,5 +57,5 @@
   "bugs": {
     "url": ""
   },
-  "homepage": "COMP229- F2020-3008185557.herokuapp.com"
+  "homepage": "https://comp-f2020-midterm-301064568.herokuapp.com/"
 }
